--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-select": "5.7.3",
+    "react-youtube": "10.1.0",
     "styled-components": "5.3.10",
     "tailwindcss": "3.3.1",
     "yup": "1.1.1"
