--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-next": "13.3.1",
     "formik": "2.2.9",
     "next": "13.4.1",
+    "nodemailer": "6.9.5",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
